--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 #boardroom-kailua i {
     color: white;
 }
+
+#navbar2 .nav-item {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top:2px;
+    padding-bottom: 0.5rem;
+    color: #E33E19;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    cursor: pointer!important;
+}
+
+#navbar2 .active {
+    padding-top: 0px;
+    color: black;
+}
